# minecraft-operator

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  aqua.yaml  kind-config.yaml  kindconfig.yaml  renovate.json
.github/workflows/: docker.yaml  main.yaml
config/base/: kustomization.yaml
config/example/: kustomization.yaml  minecraft.yaml  service.yaml
config/minecraft-operator/: deployment.yaml  example-minecraft.yaml  kustomization.yaml  namespace.yaml
config/rbac/: clusterrole.yaml  clusterrolebinding.yaml  kustomization.yaml
docker/arm64/: Dockerfile
src/: controller.rs  crd.rs  lib.rs  main.rs  minecraft.rs  operator.rs  server.rs
