[package]
name = "minecraft-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.74.0", features = ["runtime", "derive", "admission"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
serde = "1.0.145"
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
schemars = "0.8.10"
clap = { version = "3.2.22", features = ["derive"] }
serde_yaml = "0.9.13"
anyhow = "1.0.65"
