[package]
name = "minecraft-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.74.0", features = ["runtime", "derive", "admission"] }
k8s-openapi = { version = "0.16.0", features = ["v1_24"] }
serde = "1.0.145"
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
schemars = "0.8.11"
clap = { version = "4.0.10", features = ["derive"] }
serde_yaml = "0.9.13"
anyhow = "1.0.65"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.36"
actix-web = "4.2.1"
futures-util = "0.3.24"
futures = "0.3.24"
thiserror = "1.0.35"
prometheus = "0.13.2"
chrono = "0.4.22"
